# tg_quiz_bot

./: main.py  pyproject.toml
controllers/: questions.json  quiz.py  start.py
