[tool.poetry]
name = "telegram-quiz-bot"
version = "0.1.0"
description = ""
authors = ["saet0sy <saet0sy@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_quiz_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
